methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:17: error: not found: value seenBaggle
        return seenBaggle = true 
               ^MethodsReturning:6: error: type mismatch;
 found   : Unit
 required: Boolean
    for (stepper <-1 to 6){
                 ^